[gd_scene load_steps=4 format=2]

[ext_resource path="res://interfaz.gd" type="Script" id=1]
[ext_resource path="res://ScoreLabel.gd" type="Script" id=2]
[ext_resource path="res://Mensaje.gd" type="Script" id=3]

[node name="interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -151.0
margin_right = 151.0
margin_bottom = 116.0
text = "

					Score
"
align = 1
valign = 1
script = ExtResource( 2 )

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -78.0
margin_right = 96.0
text = "Paloma Gamberra"
align = 1
valign = 1
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -77.0
margin_right = 97.0
margin_bottom = -23.0
text = "Play"

[node name="mensajetimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="mensajetimer" to="." method="_on_mensajetimer_timeout"]
